2013-08-14 Anton Kolesov   <akolesov@synopsys.com>

	* build-all.sh: Unset some environment variables for example CROSS_COMPILE
	and ARCH. Tools makefiles recognize these variable and might use them in
	an undesirable way. For example CROSS_COMPILE has a predence over
	toolchain we are building and this for example might cause a big endian
	toolchain to have little endian standard libraries.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* arc-clone-all.sh: More comprehensive version of the script.
	* README.md: Use HTTPS versions of repository URLs.

2013-07-17  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Add --disable-werror and --no-disable-werror options.
	* build-elf32.sh: Add DISABLEWERROR to configure.
	* build-uclibc.sh: Likewise.

2013-07-12  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-all.sh: Don't symlink-all newlib, instead just symlink the
	top level directories.

2013-07-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Remove --disable-werror from configuration.
	* build-uclibc.sh: Likewise.

2013-07-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* build-kernel.sh: Use define-release.sh and associated
	environment variables.

2013-07-03  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Based on an idea from Christian Ruppert
	<christian.ruppert@abilis.com>

	* build-all.sh: Add --uclibc-defconfig option, setting
	UCLIBC_DEFCFG environment variable.
	* build-uclibc.sh: Use UCLIBC_DEFCFG environment variable to
	specify defconfig for uClibc.

2013-06-25  Simon Cook  <simon.cook@embecosm.com>

	* tag-release.sh: Use LINUXDIR environment variable.

2013-06-20  Simon Cook  <simon.cook@embecosm.com>

	* build-all.sh: Disable automatic patching of relative RPATHs.

2013-06-18  Simon Cook  <simon.cook@embecosm.com>

	* rel-rpaths.sh: Added script to replace hard-coded RPATHs in
	the compiled toolchain with those relative to INSTALL.